# ai-native-software-development

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LESSON-2-IMPLEMENTATION-SUMMARY.md  PART-2-AUDIENCE-ALIGNMENT-AUDIT.md  PART-2-FIX-PLAN.md  README.md  STUDENT-TESTING-GUIDE-CHAPTER-31.md  book-source  package.json  pnpm-lock.yaml  tailwind.config.ts
.claude/: ralph-loop.local.md  settings.json  settings.local.json
auth-server/: .env.example  README.md  auth-schema.ts  (+3 more)
panaversity-fs/: .env.example  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml
panaversity-fs/docs/: ARCHITECTURE.md  DEVELOPMENT.md  MCP-TOOLS.md  MIGRATION.md  SETUP.md
panaversity-fs/scripts/: migrate_book_source.py  postman.json
panaversity-fs/src/panaversity_fs/: app.py  audit.py  config.py  models.py  path_utils.py  server.py
panaversity-fs/src/panaversity_fs/database/: connection.py  models.py
panaversity-fs/src/panaversity_fs/tools/: assets.py  bulk.py  content.py  delta.py  registry.py  search.py  validate.py
panaversity-fs/tests/e2e/: test_complete_book_workflow.py
panaversity-fs/tests/edge_cases/: test_production_structure.py
panaversity-fs/tests/integration/: test_conflict_detection.py  test_content_workflows.py
panaversity-fs/tests/performance/: test_overlay_latency.py
panaversity-fs/tests/property/: test_invariant_r2_journal.py  test_invariant_r5_overlay.py
panaversity-fs/tests/unit/: test_content_tools.py  test_delta_build.py  test_journal.py  test_overlay_content.py  test_path_utils.py  test_registry_bulk_tools.py  test_validate_book.py
(+1461 files in other folders)
